crates/formatter/tests/snapshots/snapshots__migrations__000339_add_scheduling_to_presets.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Add scheduling_timezone column to template_version_presets table
alter table template_version_presets
	add column scheduling_timezone text default '' not null;

-- Add table for prebuild schedules
create table template_version_preset_prebuild_schedules (
	id uuid primary key default gen_random_uuid() not null,
	preset_id uuid not null,
	cron_expression text not null,
	desired_instances integer not null,
	foreign key (preset_id) references template_version_presets (
		id
	) on delete cascade
);
