crates/formatter/tests/snapshots/snapshots__migrations__000340_workspace_app_status_idle.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter type workspace_app_status_state add value if not exists 'idle';
