crates/formatter/tests/snapshots/snapshots__migrations__000342_ai_task_sidebar_app_id_column_and_constraint.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Drop the check constraint first
alter table workspace_builds
	drop constraint workspace_builds_ai_task_sidebar_app_id_required;

-- Revert ai_task_sidebar_app_id back to ai_tasks_sidebar_app_id in workspace_builds table
alter table workspace_builds
	drop constraint workspace_builds_ai_task_sidebar_app_id_fkey;

alter table workspace_builds
	rename column ai_task_sidebar_app_id to ai_tasks_sidebar_app_id;

alter table workspace_builds
	add constraint workspace_builds_ai_tasks_sidebar_app_id_fkey foreign key (
		ai_tasks_sidebar_app_id
	) references workspace_apps (id);

-- Revert the workspace_build_with_user view to use the original column name
drop view workspace_build_with_user;

create view workspace_build_with_user as
select
	workspace_builds.id,
	workspace_builds.created_at,
	workspace_builds.updated_at,
	workspace_builds.workspace_id,
	workspace_builds.template_version_id,
	workspace_builds.build_number,
	workspace_builds.transition,
	workspace_builds.initiator_id,
	workspace_builds.provisioner_state,
	workspace_builds.job_id,
	workspace_builds.deadline,
	workspace_builds.reason,
	workspace_builds.daily_cost,
	workspace_builds.max_deadline,
	workspace_builds.template_version_preset_id,
	workspace_builds.has_ai_task,
	workspace_builds.ai_tasks_sidebar_app_id,
	COALESCE(visible_users.avatar_url, ''::text) as initiator_by_avatar_url,
	COALESCE(visible_users.username, ''::text) as initiator_by_username,
	COALESCE(visible_users.name, ''::text) as initiator_by_name
from
	(
		workspace_builds
		left join visible_users on (
			(workspace_builds.initiator_id = visible_users.id)
		)
	);

comment on view workspace_build_with_user is 'Joins in the username + avatar url of the initiated by user.';
