crates/formatter/tests/snapshots/snapshots__migrations__000345_audit_prebuilds_settings.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter type resource_type add value if not exists 'prebuilds_settings';
